--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
     <p>
     <strong class="important">Note:</strong> This site is derived from the <a href="http://gabrielecirulli.github.io/2048/">2048 game</a> made by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a>.
     </p>
+
+    <div class="sharing">
+      <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out Breve, a game where you join music notes to score high! #breveegame" data-via="musescore" data-url="http://git.io/2048" data-counturl="http://lasconic.github.io/2048/">Tweet</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+    </div>
   </div>
 
   <script src="js/bind_polyfill.js"></script>
