--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </p>
 
     <div class="sharing">
-      <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out Breve, a game where you join music notes to score high! #breveegame" data-via="musescore" data-url="http://git.io/2048" data-counturl="http://lasconic.github.io/2048/">Tweet</a>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out Breve, a game where you join music notes to score high! #brevegame" data-via="musescore" data-url="http://git.io/UQZTFw" data-counturl="http://lasconic.github.io/2048/">Tweet</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     </div>
   </div>
