--- a/index.html
+++ b/index.html
@@ -74,11 +74,12 @@
     </p>
     <hr>
     <p>
-    Created by Nicolas Froment from <a href="http://musescore.com" target="_blank">MuseScore</a>.</a>
+     <http://musescore.com/>.
+     Forked by Nicolas Froment from MuseScore <a href="http://musescore.com" target="_blank">MuseScore</a>.</a>
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> This site is derived from the <a href="http://gabrielecirulli.github.io/2048/">2048 game</a> made by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a>.
+    Original <a href="http://gabrielecirulli.github.io/2048/">2048 game</a> made by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a>.
     </p>
 
     <div class="sharing">
