--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </p>
     <hr>
     <p>
-     Forked by Nicolas Froment from MuseScore <a href="http://musescore.com" target="_blank">MuseScore</a>.</a>
+     Forked by Nicolas Froment from <a href="http://musescore.com" target="_blank">MuseScore</a>.</a>
     </p>
     <hr>
     <p>
