--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Breve</title>
+  <title>Whole</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -25,7 +25,7 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">Breve</h1>
+      <h1 class="title">Whole</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -33,7 +33,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the notes and get to the <strong>Breve tile!</strong></p>
+      <p class="game-intro">Join the notes and get to the <strong>Whole tile!</strong></p>
       <a class="restart-button">New Game</a>
     </div>
 
@@ -85,13 +85,16 @@
     <p>
      Forked by <a href="http://twitter.com/lasconic">Nicolas Froment</a> from <a href="http://musescore.com" target="_blank">MuseScore</a>.</a>
     </p>
+    <p>
+      Whole is a simplified version of <a href="http://lasconic.github.io/breve/">Breve</a>, at <a href="http://twitter.com/webraune">@webraune</a>'s request.
+    </p>
     <hr>
     <p>
     Original <a href="http://gabrielecirulli.github.io/2048/">2048 game</a> made by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a>.
     </p>
 
     <div class="sharing">
-      <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out Breve, a game where you join music notes to score high! #brevegame" data-via="musescore" data-url="http://git.io/QeVgiw" data-counturl="http://lasconic.github.io/breve/">Tweet</a>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out Whole, a game where you join music notes to score high! #wholegame" data-via="musescore" data-url="http://git.io/Z-0FgQ" data-counturl="http://lasconic.github.io/whole/">Tweet</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     </div>
   </div>
